# CPP

TASKS/ATM_abstraction_task/: CMakeLists.txt  atm.cpp  atm.h  bankaccount.cpp  main.cpp
TASKS/Abstraction_task/: CMakeLists.txt  accelerator.cpp  accelerator.h  brake.cpp  brake.h  break.cpp  break.h  car.cpp  car.h  engine.cpp  engine.h  key.cpp  key.h  main.cpp
TASKS/Array_task/: CMakeLists.txt  main.cpp
TASKS/BUG-88226/: main.cpp
TASKS/Battery_Notification/: Battery_Notification.pro  batterymanager.cpp  batterymanager.h  main.cpp  soundmanager.cpp  soundmanager.h
TASKS/Bug_id_120385/: CMakeLists.txt  Main.qml  main.cpp
TASKS/Bugfix_example/: CMakeLists.txt  Main.qml  main.cpp
TASKS/Bugid_127490/: main.cpp
TASKS/C_plus_plus_vedios_example/: C_plus_plus_vedios_example.pro  main.cpp  static.cpp
TASKS/Calculator/: calculator.cpp  calculator.h  main.cpp
TASKS/College_project1/: CMakeLists.txt  college.cpp  college.h  college_management.cpp  college_management.h  faculty.cpp  faculty.h  main.cpp  personaldetails.cpp  personaldetails.h  staff.cpp  staff.h  student.cpp  student.h
TASKS/Constructor/: CMakeLists.txt  ac.cpp  ac.h  main.cpp  switch.cpp  switch.h  wire.cpp  wire.h
TASKS/Datastoring_task_usingvector/: CMakeLists.txt  csv.cpp  csv.h  fileoperation.cpp  fileoperation.h  json.cpp  json.h  main.cpp  student.cpp  student.h  xml.cpp  xml.h
TASKS/Deerendra_sir_task_oneswitch_multiplelights/: CMakeLists.txt  light.cpp  light.h  main.cpp  switch.cpp  switch.h  wire.cpp  wire.h
TASKS/Employee_task/: employee.cpp  (+4 more)
TASKS/Likhitha_Task_on_Plugin/: CMakeLists.txt  csv.cpp  csv.h  fileoperations.cpp  fileoperations.h  main.cpp  student.cpp  student.h  studentmanagement.cpp  studentmanagement.h  xml.cpp  xml.h
TASKS/Plugin_task_Deerendrasir/: CMakeLists.txt  csv.cpp  csv.h  fileoperations.h  json.cpp  json.h  student.cpp  student.h  studentmanagement.cpp  studentmanagement.h  xml.cpp  xml.h
TASKS/Plugin_task_using_fileoperations/: CMakeLists.txt  csv.cpp  csv.h  main.cpp  student.cpp  student.h  txt.cpp  txt.h
TASKS/Vehicle/: CMakeLists.txt  admindetails.cpp  file_operations.cpp  fileoperation.cpp  loginmanagement.cpp  loginmanagementuser.cpp  loginmanagementuser.h  main.cpp  rental_bike_details.cpp  rental_car_details.cpp  rental_vehicle_details.cpp  rentaldetails.cpp  rentaldetails.h  rentalfileoperation.cpp  rentalfileoperation.h  rentalvehicalmanagement.cpp  rentalvehicalmanagement.h  vehicle_manager.cpp  vehiclemanagement.cpp  vehiclemanagement.h
TASKS/Vehicle_RentalManagementtask/: CMakeLists.txt  RentalBikeDetails.cpp  RentalBikeDetails.h  RentalCarDetails.cpp  RentalCarDetails.h  RentalDetails.cpp  RentalDetails.h  RentalFileOperation.cpp  RentalFileOperation.h  RentalVehicalManagement.cpp  RentalVehicalManagement.h  admins.cpp  admins.h  cashpayment.cpp  cashpayment.h  logindetails.cpp  logindetails.h  loginmanagementsystem.cpp  loginmanagementsystem.h  main.cpp  onlinepayment.cpp  onlinepayment.h  paymentmode.cpp  paymentmode.h  rentalbike.cpp  rentalbike.h  rentalcar.cpp  rentalcar.h  rentalvehicaldetails.cpp  rentalvehicaldetails.h  users.cpp  users.h  vehiclemanager.cpp  vehiclemanager.h
TASKS/Vehicle_Rental_updatedcode/: CMakeLists.txt  admins.cpp  admins.h  customer.cpp  customer.h  fileoperation.cpp  fileoperation.h  loginmanagementsystem.cpp  loginmanagementsystem.h  main.cpp  rentalcar.h  rentalvehicledetails.cpp  rentalvehicledetails.h  users.cpp  users.h  vehiclemanager.cpp  vehiclemanager.h
TASKS/Vehicle_Rentaltask1/: CMakeLists.txt  customer.cpp  customer.h  fileoperation.cpp  fileoperation.h  main.cpp  rentalbike.cpp  rentalbike.h  rentalcar.cpp  rentalvehicledetails.h  vehiclemanager.cpp  vehiclemanager.h
TASKS/Vehicle_task/: CMakeLists.txt  admins.cpp  admins.h  cashpayment.cpp  customer.cpp  customer.h  fileoperation.cpp  fileoperation.h  main.cpp  onlinepayment.cpp  rentalbikedetails.cpp  rentalbikedetails.h  rentalcardetails.cpp  rentalcardetails.h  rentaldetails.cpp  rentaldetails.h  rentalfileoperation.cpp  rentalfileoperation.h  rentalvehicaldetails.cpp  rentalvehicalmanagement.cpp  rentalvehicalmanagement.h  users.cpp  users.h  vehiclemanager.cpp  vehiclemanager.h
TASKS/Wifi_taskupdatedcode/: CMakeLists.txt  fileoperation.cpp  fileoperation.h  main.cpp  wifi.cpp  wifi.h  wifimanager.cpp  wifimanager.h
TASKS/book_task/: CMakeLists.txt  book.cpp  book.h  main.cpp
TASKS/callbyvalue_callbyreference/: CMakeLists.txt  main.cpp
TASKS/carfunction_project/: CMakeLists.txt  accelerator.cpp  accelerator.h  brake.cpp  brake.h  car.cpp  car.h  engine.cpp  engine.h  key.cpp  key.h  main.cpp
TASKS/college_project/: CMakeLists.txt  college.h  faculty.cpp  faculty.h  main.cpp  student.h
TASKS/college_studentlist_facultyvector/: CMakeLists.txt  college.cpp  college.h  college_management.cpp  college_management.h  faculty.cpp  faculty.h  main.cpp  personaldetails.cpp  personaldetails.h  student.cpp  student.h
TASKS/data_storing_task/: CMakeLists.txt  csv.cpp  csv.h  fileoperation.cpp  fileoperation.h  json.cpp  json.h  main.cpp  student.cpp  student.h  xml.cpp  xml.h
TASKS/deerendrasir_task/: CMakeLists.txt  ac.cpp  ac.h  switch.cpp  switch.h  wire.h
TASKS/diamond_problem/: CMakeLists.txt  README.md  cngengine.cpp  cngengine.h  engine.cpp  engine.h  hybridcar.cpp  hybridcar.h  main.cpp  petrolengine.cpp  petrolengine.h
TASKS/encapsulation_task1/: CMakeLists.txt  main.cpp  person.cpp  person.h  student.cpp  student.h
TASKS/friend_class/: CMakeLists.txt  animal.cpp  animal.h  bird.cpp  bird.h  elephant.cpp  elephant.h  likitha.cpp  likitha.h  main.cpp  parrot.cpp  parrot.h  person.cpp  person.h
TASKS/friend_function/: CMakeLists.txt  animal.cpp  animal.h  bird.cpp  bird.h  elephant.cpp  elephant.h  likitha.cpp  likitha.h  main.cpp  parrot.cpp  parrot.h  person.cpp  person.h
TASKS/inheritance_task/: CMakeLists.txt  a.cpp  b.h  c.h  main.cpp
TASKS/inlinefunction/: CMakeLists.txt  main.cpp  operations.cpp  operations.h
TASKS/list_concept/: CMakeLists.txt  main.cpp
TASKS/loader_example/: CMakeLists.txt  main.qml
(+488 files in other folders)
